sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:8: error: illegal start of simple pattern
    for(for j <- i to len){
        ^AlgSelectionSort:14: error: '<-' expected but '}' found.
  }
  ^